[devtools] Switch back to using G1